# risk-workbench

./: .coverage  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.devcontainer/: devcontainer.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  main.py
app/auth/: csrf.py  middleware.py  oidc.py  password.py  provisioning.py
app/nav/: __init__.py  manifest.py
app/poller/: run.py
app/routers/: admin.py  auth.py  health.py  shell.py
app/services/: auth_service.py
app/templates/: icons
db/: README.md  __init__.py  config.py  connection.py  errors.py  execute.py  kerberos.py  requirements.txt  scope.py  scripts.py  test_db.py
deploy/nginx/: nginx.conf
docs/: CR_01__RWB_JOBS.md  DATA_MODEL.md  DEVELOPER_PLAYBOOK.md  ENTRA_SETUP.md  PARTNER_PLAYBOOK.md  PRD.md  SCAFFOLDING.md  USER_PROVISIONING.md  execution-design.md  metamodel-design.md  mvp-scope.md
docs/sequence_diagrams/: README.md
infra/: .env.example  Dockerfile.dev  docker-compose.yml
infra/scripts/: bootstrap_db.py  reset_db.py  run_user_setup  seed_db.py  start-all.sh  stop-all.sh  user_setup.py  wsl-env.sh  wsl-setup.sh  wsl-start.sh
reference/: MOCK_NOTES.md  README.md  heartbeat_poc.py  mock_data.py  nav_manifest.py  serve.py
reference/templates/: home.html  shell.html  signin.html  submissions.html  workflows.html
specs/001-app-shell-nav-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/sqlserver/: test_auth_migration.py  test_connectivity.py
tests/unit/: conftest.py  test_admin_routes.py  test_auth_routes.py  (+22 more)
(+48 files in other folders)
